--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>テキスト抽出アプリ</title>
+    <script>
+        function clearText() {
+            document.getElementById("inputText").value = "";
+        }
+    </script>
 </head>
 <body>
     <h1>テキストから情報抽出</h1>
     <form method="POST">
-        <textarea name="text" rows="20" cols="100"></textarea><br>
+        <textarea id="inputText" name="text" rows="20" cols="100"></textarea><br>
         <button type="submit">送信</button>
+        <button type="button" onclick="clearText()">クリア</button>
     </form>
 </body>
 </html>
