--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,11 @@
 </head>
 <body>
     <h1>印刷メモ・印刷リスト作成アプリ</h1>
-    <div>予約システムで対象製品のページを開いて、ctr+Aで選択→その後ctr+Cでコピーした値をフィールドに貼り付け(ctr+V)してください。
+    <div>予約システムで対象製品のページを開いて、ctr+Aで選択→その後ctr+Cでコピーした値を<br>フィールドに貼り付け(ctr+V)してください。
     <form method="POST" onsubmit="clearOnSubmit()">
         <textarea id="inputText" name="text" rows="20" cols="100"></textarea><br>
-        <button type="submit">送信</button>
-        <button type="button" onclick="clearData()">データクリア</button>
+        <button type="submit">送信</button><br><br><br>
+        <button type="button" onclick="clearData()">※データクリア</button>スプレッドシートのデータ消去
     </form>
 </body>
 </html>
