--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
     <form method="POST" onsubmit="clearOnSubmit()">
         <textarea id="inputText" name="text" rows="20" cols="100"></textarea><br><br>
         <button type="submit">送信</button><br><br><br>
-        <span style="color: red;"></span>↓スプレッドシートのデータ消去</span><br>
-        <button type="button" onclick="clearData() " style="background-color: orange; color: white;">データクリア</button>
+        ↓スプレッドシートのデータ消去<br>
+        <button type="button" onclick="clearData() " style="background-color: red; color: white;">データクリア</button>
     </form>
 </body>
 </html>
