--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
     <form method="POST" onsubmit="clearOnSubmit()">
         <textarea id="inputText" name="text" rows="20" cols="100"></textarea><br><br>
         <button type="submit" style="font-size: 18px; padding: 10px 30px;">送信</button><br><br><br>
-        <div style="font-size: 0.7em; color: #d9534f; font-weight: bold;">↓スプレッドシートのデータ消去</div><br>
+        <div style="font-size: 0.7em; color: #d9534f; font-weight: bold;">↓スプレッドシートのデータ消去</div>
         <button type="button" onclick="clearData() " style="background-color: red; color: white;">データクリア</button>
         <p id="statusMessage" style="font-weight: bold; margin-top: 1em; display: none;"></p>
     </form>
