--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 <body>
     <h1>印刷メモ・印刷リスト作成アプリ</h1>
     <div>予約システムで対象製品のページを開いて、ctr+Aで選択→その後ctr+Cでコピーした値を<br>フィールドに貼り付け(ctr+V)してください。</div><br>
-    <form method="POST" onsubmit="clearOnSubmit()">
+    <div><a href="https://docs.google.com/spreadsheets/d/1fKN1EDZTYOlU4OvImQZuifr2owM8MIGgQIr0tu_rX0E/edit?gid=0#gid=0" target="_blank" style="color: #007bff; text-decoration: underline;">⇒印刷リスト(スプレッドシート)を開く</a></div><form method="POST" onsubmit="clearOnSubmit()">
         <textarea id="inputText" name="text" rows="20" cols="100"></textarea><br><br>
         <button type="submit" style="font-size: 18px; padding: 10px 30px;">送信</button><br><br><br>
         <div style="font-size: 0.7em; color: #d9534f; font-weight: bold;">↓スプレッドシートのデータ消去</div>
